k8s/ms2.message-queue/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: message-queue
  labels:
    app: mq-s6
