k8s/ms2.message-queue/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mq-s6-consumer
  namespace: message-queue
  labels:
    app: mq-s6-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mq-s6-consumer
  template:
    metadata:
      labels:
        app: mq-s6-consumer
    spec:
      containers:
        - name: mq-s6
          image: itsanla/mq-s6:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "150m"
      terminationGracePeriodSeconds: 30
