k8s/ms2.message-queue/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mq-s6-ingress
  namespace: message-queue
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: mq.anla.works
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mq-s6-publisher-service
                port:
                  number: 80
